# gen-avatar

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build-code.yaml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/handler/: avatar.rs  health.rs  mod.rs
crates/api/src/libs/: http.rs  mod.rs  redis.rs
crates/api/src/utils/: config.rs
crates/gen-avatar/: Cargo.toml
crates/gen-avatar/src/: avatar.rs  color.rs  error.rs  lib.rs
