[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
confik = "0.12.0"
redis = { version = "0.27.4", features = ["tokio-comp"] }
tokio = { version = "1.40.0", features = ["full"] }
derive_more = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4", features = ["serde"] }
hyperflake-rs = "0.1.0"
env_logger = "0.11.0"
lazy_static = "1.4"
listenfd = "1.0.1"
tracing-actix-web = "0.7"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tonic = "0.12.3"
gen_avatar_lib = { path = "../gen-avatar" }
image = "0.25.5"
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
debug = false
panic = "abort"